# litestar-pydotorg

./: .dockerignore  .env.dev  .env.dev.example  .env.docker.example  .env.example  .env.prod  .env.prod.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  .prekignore  AUTH_QUICK_REFERENCE.md  CNAME  DJANGO_TO_SQLALCHEMY_MODEL_MAPPING.md  Dockerfile  Dockerfile.dev  Dockerfile.worker  FEATURE_FLAGS.html  FEATURE_FLAG_LIBRARY_ANALYSIS.html  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLE.md  LOGGING_IMPLEMENTATION.md  Makefile  PLAN.md  POSTMAN_GUIDE.html  QUICKSTART_TEMPLATES.md  README.md  TEMPLATE_SYSTEM_SUMMARY.md  TODO.md  alembic.ini  api-authentication.html  api-getting-started.html  api-versioning.html  biome.json  changelog.html  docker-compose.prod.yml  docker-compose.yml  genindex.html  index.html  initial_migration.sql  (+10 more)
.github/: WORKFLOWS_SETUP.md  dependabot.yml  labeler.yml
.github/workflows/: README.md  cd.yml  ci.yml  codeql.yml  docker.yml  docs.yml  labeler.yml  release.yml
_modules/: enum.html  index.html  re.html
_modules/pydotorg/: cli.html  tasks.html
_modules/pydotorg/core/: exceptions.html  features.html  logging.html
_modules/pydotorg/lib/: api_versioning.html  tasks.html
_modules/pydotorg/tasks/: downloads.html  feeds.html  stats.html
_modules/sqlalchemy/orm/: attributes.html  instrumentation.html  properties.html  relationships.html
_sources/: FEATURE_FLAG_LIBRARY_ANALYSIS.md.txt  api-authentication.md.txt  api-getting-started.md.txt  changelog.md.txt
_sources/architecture/: API_TAGS_BEST_PRACTICES.md.txt  API_TAGS_QUICK_REF.md.txt  API_TAGS_STRUCTURE.md.txt  ARCHITECTURE.md.txt  DOMAIN_MODELS.md.txt  RATE_LIMITING_ARCHITECTURE.md.txt  RATE_LIMITING_QUICK_REF.md.txt  README.md.txt  README_API_TAGS.md.txt  index.md.txt
_sources/guides/: configuration.md.txt  development.md.txt  testing.md.txt
_static/: custom.css
api/: config.html  index.html  lib.html  main.html  tasks.html
api/core/: auth.html  cache.html  database.html  email.html  exceptions.html  features.html  feeds.html  ical.html  index.html  logging.html  middleware.html  openapi.html  ratelimit.html  search.html  security.html  worker.html
api/domains/: about.html  admin.html  banners.html  blogs.html  codesamples.html  community.html  docs.html  downloads.html  events.html  index.html  jobs.html  mailing.html  minutes.html  nominations.html  pages.html  search.html  sponsors.html  sqladmin.html  successstories.html  users.html  work_groups.html
architecture/: API_TAGS_BEST_PRACTICES.html  API_TAGS_IMPLEMENTATION.html  API_TAGS_INDEX.html  API_TAGS_QUICK_REF.html  API_TAGS_STRUCTURE.html  ARCHITECTURE.html  DATABASE_SCHEMA.html  DOMAIN_MODELS.html  QUICK_START.html  RATE_LIMITING_ARCHITECTURE.html  RATE_LIMITING_QUICK_REF.html  README.html  README_API_TAGS.html  index.html
architecture/adr/: 001-litestar-framework.html  002-saq-background-tasks.html  template.html
cookbook/: authentication-recipes.html  database-recipes.html  domain-patterns.html  index.html  testing-recipes.html
docs/: FEATURE_FLAGS.md  FEATURE_FLAG_LIBRARY_ANALYSIS.md  POSTMAN_GUIDE.md  api-authentication.md  api-getting-started.md  api-versioning.md  changelog.md  conf.py  feature_flags_example.py  feature_flags_template_example.html  index.md  postman-collection.json
docs/_static/: custom.css
docs/api/: config.rst  index.md  lib.rst  main.rst  tasks.rst
docs/api/core/: auth.rst  (+15 more)
docs/architecture/: API_TAGS_HIERARCHY.txt  API_TAGS_IMPLEMENTATION.md  API_TAGS_INDEX.md  API_TAGS_QUICK_REF.md  API_TAGS_STRUCTURE.md  API_TAGS_SUMMARY.txt  ARCHITECTURE.md  DATABASE_SCHEMA.md  DOMAIN_MODELS.md  QUICK_START.md  RATE_LIMITING_ARCHITECTURE.md  RATE_LIMITING_QUICK_REF.md  README.md  README_API_TAGS.md  rate_limiting_diagram.txt
docs/cookbook/: authentication-recipes.md  database-recipes.md  domain-patterns.md  index.md  testing-recipes.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guides/: api-usage.md  authentication.md  contributing.md  debugging.md  deployment.md  docker.md  feature-flags.md  index.md  troubleshooting.md
docs/internal/: AUTHENTICATION_SETUP.md  AUTH_QUICK_REFERENCE.md  DATABASE_SETUP_SUMMARY.md  DOCKER.md  FRONTEND_SETUP.md  LOGGING_EXAMPLE.md  PLAN.md  PLAN_ARCHIVE.md
getting-started/: index.html  installation.html  quickstart.html
guides/: api-usage.html  authentication.html  configuration.html  contributing.html  debugging.html  deployment.html  development.html  docker.html  feature-flags.html  index.html  testing.html  troubleshooting.html
resources/css/: admin.css  input.css  timeline.css
resources/js/: admin.ts  main.ts  timeline.ts
scripts/: import_downloads.py  import_events.py  import_jobs.py  import_news.py  import_success_stories.py
src/pydotorg/: __init__.py  cli.py  config.py  main.py  main_with_auth.py.example
static/.vite/: manifest.json
static/css/: admin-styles-Bsb1Zbzj.css  admin.css  input.css  scalar-theme.css  styles-BOI-FR6B.css  styles-CwQKvkuG.css  styles-Dv2Qr3DI.css  timeline.css
static/js/: admin-k-SLiKlm.js  admin.js  main-Bvxx6Sso.js  main.js  module.esm-BScJx0li.js  timeline.js
tests/: __init__.py  conftest.py
tests/core/: test_csrf.py  test_features.py  test_jwt.py  test_logging.py
tests/e2e/: README.md  conftest.py  test_auth_forms.py
tests/integration/: README_AUTH_TESTS.md  conftest.py  test_admin_email.py  test_api_validation_errors.py  test_auth_endpoints.py  test_auth_middleware.py  test_banners_routes.py  test_blogs_routes.py  test_codesamples_routes.py  test_community_routes.py  test_downloads_routes.py  test_events_routes.py  test_health.py  test_jobs_routes.py  test_mailing.py  test_mailing_routes.py  test_minutes_routes.py  test_nominations_routes.py  test_oauth_routes.py  test_page_cache.py  test_pages_routes.py  test_ratelimit.py  test_search_routes.py  test_session_auth.py  test_sponsors_routes.py  test_successstories_routes.py  test_tasks_admin.py  test_users_routes.py  test_workgroups_routes.py
tests/unit/: test_auth.py  test_health.py  test_models.py
(+655 files in other folders)
